# img_pre_processing_visualizer

./: .gitignore  GEMINI.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  tests.py
backend/app/: main.py
backend/app/api/endpoints/: images.py  preprocessing.py
backend/app/db/: base.py
backend/src/: __init__.py
backend/src/api/endpoints/: preprocessing.py
backend/src/core/: config.py  middlewares.py
backend/src/models/: image.py  preprocessing.py
frontend/: Dockerfile  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: image-uploader.tsx  results-display.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: utils.ts
frontend/src/routes/: __root.tsx  _layout.tsx
frontend/src/routes/_layout/: image-processing.tsx  index.tsx
scripts/: generate-client.sh
