[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "numpy>=2.3.3",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
